fix spacing on dashboard

--- a/app/assets/stylesheets/styles/globals.scss
+++ b/app/assets/stylesheets/styles/globals.scss
@@ -11,7 +11,6 @@ html {
 }
 
 body {
-  font-family: "Source Sans Pro", sans-serif;
   font-size: variables.$font-size;
 }
 
